Fix spacing issues when fields are missing

--- a/assets/stylus/modules/platform.styl
+++ b/assets/stylus/modules/platform.styl
@@ -275,6 +275,7 @@ transition-rate = 0.2s
       font-style italic
       font-weight lighter
       padding-bottom 20px
+      margin-bottom 20px
       border-bottom camp-border
       .share
         flexbox(flex)
@@ -312,7 +313,8 @@ transition-rate = 0.2s
       color #111111
       font-size: 1.8em
       font-weight bold
-      padding 25px 0
+      margin-bottom 25px
+      padding-bottom 25px
       line-height 1.25em
       border-bottom camp-border
       .twitter-icon
